--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "redux": "^4.0.1",
     "redux-action-creator": "^3.0.0",
     "redux-devtools-extension": "^2.13.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
